--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -21,7 +21,9 @@ jobs:
         uses: actions/checkout@v2
       -
         name: get terraform
-        run: tfswitch -b $HOME/.bin/terraform
+        run: |
+          export TF_VERSION=1.0.5
+          tfswitch -b $HOME/.bin/terraform
       -
         name: terraform init 
         run: find . -type f -name "*.tf" -exec dirname {} \;|sort -u | while read m; do (cd "$m" && echo "$m - init" && terraform init -input=false -backend=true) || exit 1; done
