testing new github test with vars removed
Signed-off-by: greyhoundforty <ryantiffany@fastmail.com>

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -31,5 +31,7 @@ jobs:
         name: terraform validate
         run: find . -name ".terraform" -prune -o -type f -name "*.tf" -exec dirname {} \;|sort -u | while read m; do (cd "$m" && echo "$m - validate" && terraform validate && echo "√ $m") || exit 1 ; done
       -
-        name: terraform new vpc check 
-        run: terraform plan -var="TF_VAR_IBMCLOUD_API_KEY=${{ secrets.IBMCLOUD_API_KEY }}" -out default.tfplan
+        name: terraform new vpc check
+        run: |
+          export project_name="test-$CI_COMMIT_SHORT_SHA"
+          terraform plan -var="TF_VAR_IBMCLOUD_API_KEY=${{ secrets.IBMCLOUD_API_KEY }}" -var="region=eu-gb" -var="ssh_key=hyperion-eu-gb" -var="resource_group=CDE"  -var="project_name=$project_name" -out default.tfplan
